link de media queries

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
     <!-- archivo css -->
     <link rel="stylesheet" href="css/styles.css">
+    <!-- archivo responsive -->
+    <link rel="stylesheet" href="css/mediaqueries.css">
 
     <!-- fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
