--- a/pages/acercade.html
+++ b/pages/acercade.html
@@ -7,7 +7,9 @@
 
     <!-- archivo css -->
     <link rel="stylesheet" href="../css/styles.css">
-
+    <!-- archivo responsive -->
+    <link rel="stylesheet" href="../css/mediaqueries.css">
+    
     <!-- fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&family=Sintony&display=swap" rel="stylesheet">
