arreglo de responsive en secciones index, acerca de, contacto

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -10,6 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&family=Sintony&display=swap" rel="stylesheet">
 
+    <!-- font awesome -->
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,6 +24,10 @@
     <header class="header">
         <img  class="header__icono" src="../assets/img/logobep.png" alt="logo BEP">
 
+        <div class="header__div">
+            <img src="../assets/img/bars.png" alt="barras menu">
+        </div>
+        
         <nav class="header__nav">
             <ul class="header__nav__menu">
                 <li><a href="../index.html">Inicio</a></li>
@@ -43,7 +49,7 @@
     <!-- termina el espacio del logo y las referncias -->
 
     <section class="section">
-        <div class="section__div__fondo--servicios">
+        <div class="section__div--servicios">
             <div class="section__div__table">
                 <!-- Asesoramiento tributario -->
                 <div class="servicio">
@@ -118,19 +124,20 @@
     </section>
 
     <footer class="footer">
-        <img class="footer__imagen" src="../assets/img/logobep.png" alt="logo BEP" >
-            
+        <div class="footer__imagen">
+            <img src="../assets/img/logobep.png" alt="logo BEP" >
+        </div>   
         <!-- contenedor de los links y -->
         <div class="footer__div">   
             <div class="footer__div__contacto">
                 <nav class="footer__nav">
                     <ul class="footer__nav__contacto">
                         <li>
-                            <img class="footer__div__phone" src="../assets/img/phone.png" alt="phone">
+                            <i class="fas fa-phone"></i>
                             <a href="mailto:bep.contadoras@gmail.com">bep.contadoras@gmail.com</a>
                         </li>
                         <li>
-                            <img class="footer__div__mail" src="../assets/img/arroba.png" alt="mail">
+                            <i class="fas fa-at"></i>
                             <a href="https://wa.me/59892438211">(+598) 92 438 211</a>
                         </li>
                     </ul>
