--- a/pages/quienessomos.html
+++ b/pages/quienessomos.html
@@ -15,8 +15,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&family=Sintony&display=swap" rel="stylesheet">
 
-    <!-- font awesome -->
+    <!--iconos font awesome -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+
+    <!-- libreria de animación -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -55,7 +58,7 @@
 
         <section class="section">
             <div class="section__div--quienessomos">
-                <div class="section__div__segundotitulo">
+                <div class="section__div__segundotitulo" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                     <h2>Nuestro equipo</h2>
                 </div> 
                 <div class="section__div__contadoras" >
@@ -121,9 +124,11 @@
     
         </footer>
     </div>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 
-
-    
 </body>
 
 </html>
