--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&family=Sintony&display=swap" rel="stylesheet">
 
+    <!-- iconos font awesome -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+
+    <!-- libreria de animación -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -58,10 +62,10 @@
 
         <section class="section">
             <div class="section__div--index">
-                <div class="section__div__titulo">
+                <div class="section__div__titulo" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                     <h1>SOLUCIONES <br> EMPRESARIALES</h1>
                 </div>
-                <div class="section__div__texto">
+                <div class="section__div__texto" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                 <p> En BEP nos especializamos en brindar <strong>soluciones a la medida </strong> de la empresa abarcando diferentes 
                     áreas para adaptarnos a tus intereses</p>
                 </div> 
@@ -102,6 +106,11 @@
             </div>
         </footer>
 
-    </div>    
+    </div> 
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+
 </body>
 </html>
