--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -10,8 +10,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&family=Sintony&display=swap" rel="stylesheet">
 
-    <!-- font awesome -->
+    <!-- iconos font awesome -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+
+    <!-- libreria de animación -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,140 +23,145 @@
 </head>
 
 <body>
-    <!-- espacio para el logo y las referncias -->
-    <header class="header">
-        <img  class="header__icono" src="../assets/img/logobep.png" alt="logo BEP">
+    <div class="grid">
+        <!-- espacio para el logo y las referncias -->
+        <header class="header">
+            <img  class="header__icono" src="../assets/img/logobep.png" alt="logo BEP">
 
-        <div class="header__div">
-            <img src="../assets/img/bars.png" alt="barras menu">
-        </div>
-        
-        <nav class="header__nav">
-            <ul class="header__nav__menu">
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="../pages/acercade.html">Acerca de BEP</a></li>
-                <li><a href="../pages/servicios.html">Servicios</a>
-                    <ul class="header__nav__submenu">
-                        <li><a href="./servicios.html#aTributario">Asesoramiento tributario</a></li>
-                        <li><a href="./servicios.html#aContable">Asesoramiento contable</a></li>
-                        <li><a href="./servicios.html#aLaboral">Asesoramiento Laboral</a></li>
-                        <li><a href="./servicios.html#aSocietario">Asesoramiento Societario</a></li>
-                        <li><a href="./servicios.html#aProyectos">Asesoramiento de Proyectos de Inversión</a></li>
-                    </ul>
-                </li>
-                <li><a href="../pages/quienessomos.html">Quienes somos</a></li>
-                <li><a href="../pages/contacto.html">Contacto</a></li>
-            </ul>   
-        </nav>
-    </header>
-    <!-- termina el espacio del logo y las referncias -->
-
-    <section class="section">
-        <div class="section__div--servicios">
-            <div class="section__div__table">
-                <!-- Asesoramiento tributario -->
-                <div class="servicio">
-                    <img class="servicio__imagen" src="../assets/img/iconosServicios/tributario.png" alt="icono asesoramiento tributario">
-                    <h2 class="servicio__tipo">Asesoramiento tributario </h2>
-                    <ul class="servicio__detalle">
-                        <li class="servicio__detalle__item">Asesoramiento integral en materia de tributos nacionales</li>
-                        <li class="servicio__detalle__item"> Planificación tributaria a nivel local</li>
-                        <li class="servicio__detalle__item">Asesoramiento de tributación internacional de acuerdo a los Convenios para evitar la doble imposición firmados por Uruguay </li>
-                        <li class="servicio__detalle__item">Preparación y revisión de declaraciones juradas </li>
-                        <!-- <li class="servicio__detalle__item">Asesoramiento en materia de beneficios tributarios para la promoción de inversiones </li> -->
-                        <!-- <li class="servicio__detalle__item">Asesoramiento en reestructuras empresariale (fusiones, adquisiciones, joint ventures) </li>
-                        <li class="servicio__detalle__item">Asesoramiento tributario a personas físicas </li>
-                        <li class="servicio__detalle__item">Evacuación de consultas tributarias</li>
-                        <li class="servicio__detalle__item">Confección de Consultas para ser presentadas ante la Dirección General Impositiva </li> -->
-                    </ul>
-                </div>
-
-                <!-- Asesorameinto contable -->
-                <div class="servicio">
-                    <img class="servicio__imagen" src="../assets/img/iconosServicios/contabilidad.png" alt="icono asesoramiento contable">
-                    <h2 class="servicio__tipo">Asesoramiento contable</h2>
-                    <ul class="servicio__detalle">
-                        <li class="servicio__detalle__item">Contabilidad mensual</li>
-                        <li class="servicio__detalle__item">Revision limitada de Estados Financieros</li>
-                        <li class="servicio__detalle__item">Información de Compilación de Estados Financieros</li>
-                        <li class="servicio__detalle__item">Evaluación de control interno</li>
-                        <li class="servicio__detalle__item">Análisis de gastos</li>
-                        <li class="servicio__detalle__item">Inventarios a medida</li>
-                        <li class="servicio__detalle__item">Preparación de Balances para Banco</li>
-                    </ul>
-                </div>
-
-                <!-- Asesoramiento laboral -->
-                <div class="servicio">
-                    <img class="servicio__imagen" src="../assets/img/iconosServicios/laboral.png" alt="icono asesoramiento laboral">
-                    <h2 class="servicio__tipo">Asesoramiento laboral</h2>
-                    <ul class="servicio__detalle">
-                        <li class="servicio__detalle__item">Liquidación de haberes y confección de recibos al personal dependiente.</li>
-                        <li class="servicio__detalle__item">Intermediación con entidades bancarias para pagos de sueldo.</li>
-                        <li class="servicio__detalle__item">Presentación y mantenimiento de la historial laboral ante el BPS.</li>
-                        <li class="servicio__detalle__item">Gestión, control y pago de facturas ante BPS.</li>
-                        <li class="servicio__detalle__item">Inscripción y seguimiento de obras de construcción en BPS.</li>  
-                    </ul>
-                </div>
-
-                <!-- Asesoramiento societario -->
-                <div class="servicio">
-                    <img class="servicio__imagen" src="../assets/img/iconosServicios/societario.png" alt="icono asesoramiento societario">
-                    <h2 class="servicio__tipo">Asesoramiento societario</h2> 
-                    <ul class="servicio__detalle">
-                        <li class="servicio__detalle__item">Asesoramiento sobre la mejor estructura societaria para sus necesidades.</li>
-                        <li class="servicio__detalle__item">Asesoramiento en la compraventa de sociedades.</li>
-                        <li class="servicio__detalle__item">Aumento y disminuciones de capital contractual.</li>
-                        <li class="servicio__detalle__item">Preparación, registro y transcripción de actas.</li>
-                        <li class="servicio__detalle__item">Actualización de información ante los organismos de contralor.</li>  
-                    </ul>
-                </div>
-
-                <!-- Asoramiento en proyectos de inversion -->
-                <div class="servicio">
-                    <img class="servicio__imagen" src="../assets/img/iconosServicios/inversion.png" alt="icono asesoramiento de proyectos">
-                    <h2 class="servicio__tipo">Asesoramiento  de proyectos</h2>
-                    <ul class="servicio__detalle">
-                        <li class="servicio__detalle__item">Asesoramiento en el diseño de la mejor estrategia para presentar un proyecto de inversión que maximice los beneficios fiscales para la empresa.</li>
-                        <li class="servicio__detalle__item">Preparación de toda la documentación a presentar ante los organismos correspondientes.</li>
-                        <li class="servicio__detalle__item">Confección y presentación de los controles de seguimiento exigidos por la normativa para el mantenimiento del beneficio del proyecto de inversión.</li>
-                    </ul>
-                 </div>
+            <div class="header__div">
+                <img src="../assets/img/bars.png" alt="barras menu">
             </div>
-        </div>
-    </section>
+            
+            <nav class="header__nav">
+                <ul class="header__nav__menu">
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="../pages/acercade.html">Acerca de BEP</a></li>
+                    <li><a href="../pages/servicios.html">Servicios</a>
+                        <ul class="header__nav__submenu">
+                            <li><a href="./servicios.html#aTributario">Asesoramiento tributario</a></li>
+                            <li><a href="./servicios.html#aContable">Asesoramiento contable</a></li>
+                            <li><a href="./servicios.html#aLaboral">Asesoramiento Laboral</a></li>
+                            <li><a href="./servicios.html#aSocietario">Asesoramiento Societario</a></li>
+                            <li><a href="./servicios.html#aProyectos">Asesoramiento de Proyectos de Inversión</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="../pages/quienessomos.html">Quienes somos</a></li>
+                    <li><a href="../pages/contacto.html">Contacto</a></li>
+                </ul>   
+            </nav>
+        </header>
+        <!-- termina el espacio del logo y las referncias -->
 
-    <footer class="footer">
-        <div class="footer__imagen">
-            <img src="../assets/img/logobep.png" alt="logo BEP" >
-        </div>   
-        <!-- contenedor de los links y -->
-        <div class="footer__div">   
-            <div class="footer__div__contacto">
-                <nav class="footer__nav">
-                    <ul class="footer__nav__contacto">
-                        <li>
-                            <i class="fas fa-phone"></i>
-                            <a href="mailto:bep.contadoras@gmail.com">bep.contadoras@gmail.com</a>
-                        </li>
-                        <li>
-                            <i class="fas fa-at"></i>
-                            <a href="https://wa.me/59892438211">(+598) 92 438 211</a>
-                        </li>
-                    </ul>
-                </nav> 
+        <section class="section">
+            <div class="section__div--servicios">
+                <div class="section__div__table">
+                    <!-- Asesoramiento tributario -->
+                    <div class="servicio">
+                        <img class="servicio__imagen" src="../assets/img/iconosServicios/tributario.png" alt="icono asesoramiento tributario">
+                        <h2 class="servicio__tipo">Asesoramiento tributario </h2>
+                        <ul class="servicio__detalle">
+                            <li class="servicio__detalle__item">Asesoramiento integral en materia de tributos nacionales</li>
+                            <li class="servicio__detalle__item"> Planificación tributaria a nivel local</li>
+                            <li class="servicio__detalle__item">Asesoramiento de tributación internacional de acuerdo a los Convenios para evitar la doble imposición firmados por Uruguay </li>
+                            <li class="servicio__detalle__item">Preparación y revisión de declaraciones juradas </li>
+                            <!-- <li class="servicio__detalle__item">Asesoramiento en materia de beneficios tributarios para la promoción de inversiones </li> -->
+                            <!-- <li class="servicio__detalle__item">Asesoramiento en reestructuras empresariale (fusiones, adquisiciones, joint ventures) </li>
+                            <li class="servicio__detalle__item">Asesoramiento tributario a personas físicas </li>
+                            <li class="servicio__detalle__item">Evacuación de consultas tributarias</li>
+                            <li class="servicio__detalle__item">Confección de Consultas para ser presentadas ante la Dirección General Impositiva </li> -->
+                        </ul>
+                    </div>
+
+                    <!-- Asesorameinto contable -->
+                    <div class="servicio">
+                        <img class="servicio__imagen" src="../assets/img/iconosServicios/contabilidad.png" alt="icono asesoramiento contable">
+                        <h2 class="servicio__tipo">Asesoramiento contable</h2>
+                        <ul class="servicio__detalle">
+                            <li class="servicio__detalle__item">Contabilidad mensual</li>
+                            <li class="servicio__detalle__item">Revision limitada de Estados Financieros</li>
+                            <li class="servicio__detalle__item">Información de Compilación de Estados Financieros</li>
+                            <li class="servicio__detalle__item">Evaluación de control interno</li>
+                            <li class="servicio__detalle__item">Análisis de gastos</li>
+                            <li class="servicio__detalle__item">Inventarios a medida</li>
+                            <li class="servicio__detalle__item">Preparación de Balances para Banco</li>
+                        </ul>
+                    </div>
+
+                    <!-- Asesoramiento laboral -->
+                    <div class="servicio">
+                        <img class="servicio__imagen" src="../assets/img/iconosServicios/laboral.png" alt="icono asesoramiento laboral">
+                        <h2 class="servicio__tipo">Asesoramiento laboral</h2>
+                        <ul class="servicio__detalle">
+                            <li class="servicio__detalle__item">Liquidación de haberes y confección de recibos al personal dependiente.</li>
+                            <li class="servicio__detalle__item">Intermediación con entidades bancarias para pagos de sueldo.</li>
+                            <li class="servicio__detalle__item">Presentación y mantenimiento de la historial laboral ante el BPS.</li>
+                            <li class="servicio__detalle__item">Gestión, control y pago de facturas ante BPS.</li>
+                            <li class="servicio__detalle__item">Inscripción y seguimiento de obras de construcción en BPS.</li>  
+                        </ul>
+                    </div>
+
+                    <!-- Asesoramiento societario -->
+                    <div class="servicio">
+                        <img class="servicio__imagen" src="../assets/img/iconosServicios/societario.png" alt="icono asesoramiento societario">
+                        <h2 class="servicio__tipo">Asesoramiento societario</h2> 
+                        <ul class="servicio__detalle">
+                            <li class="servicio__detalle__item">Asesoramiento sobre la mejor estructura societaria para sus necesidades.</li>
+                            <li class="servicio__detalle__item">Asesoramiento en la compraventa de sociedades.</li>
+                            <li class="servicio__detalle__item">Aumento y disminuciones de capital contractual.</li>
+                            <li class="servicio__detalle__item">Preparación, registro y transcripción de actas.</li>
+                            <li class="servicio__detalle__item">Actualización de información ante los organismos de contralor.</li>  
+                        </ul>
+                    </div>
+
+                    <!-- Asoramiento en proyectos de inversion -->
+                    <div class="servicio">
+                        <img class="servicio__imagen" src="../assets/img/iconosServicios/inversion.png" alt="icono asesoramiento de proyectos">
+                        <h2 class="servicio__tipo">Asesoramiento  de proyectos</h2>
+                        <ul class="servicio__detalle">
+                            <li class="servicio__detalle__item">Asesoramiento en el diseño de la mejor estrategia para presentar un proyecto de inversión que maximice los beneficios fiscales para la empresa.</li>
+                            <li class="servicio__detalle__item">Preparación de toda la documentación a presentar ante los organismos correspondientes.</li>
+                            <li class="servicio__detalle__item">Confección y presentación de los controles de seguimiento exigidos por la normativa para el mantenimiento del beneficio del proyecto de inversión.</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
+        </section>
 
-            <div class="footer__div__referencias" >
-                <nav class="footer__nav">
-                    <ul class="footer__nav__referencias">
-                        <li><a href="../pages/quienessomos.html">Nuestro equipo</a></li>
-                        <li><a href="../pages/contacto.html">Contactanos</a></li>
-                    </ul>
-                </nav>
-            </div>      
-        </div>
-    </footer>
+        <footer class="footer">
+            <div class="footer__imagen">
+                <img src="../assets/img/logobep.png" alt="logo BEP" >
+            </div>   
+            <!-- contenedor de los links y -->
+            <div class="footer__div">   
+                <div class="footer__div__contacto">
+                    <nav class="footer__nav">
+                        <ul class="footer__nav__contacto">
+                            <li>
+                                <i class="fas fa-phone"></i>
+                                <a href="mailto:bep.contadoras@gmail.com">bep.contadoras@gmail.com</a>
+                            </li>
+                            <li>
+                                <i class="fas fa-at"></i>
+                                <a href="https://wa.me/59892438211">(+598) 92 438 211</a>
+                            </li>
+                        </ul>
+                    </nav> 
+                </div>
 
+                <div class="footer__div__referencias" >
+                    <nav class="footer__nav">
+                        <ul class="footer__nav__referencias">
+                            <li><a href="../pages/quienessomos.html">Nuestro equipo</a></li>
+                            <li><a href="../pages/contacto.html">Contactanos</a></li>
+                        </ul>
+                    </nav>
+                </div>      
+            </div>
+        </footer>
+    </div>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
