animaciones con hover en servicios y acerca de

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -56,7 +56,7 @@
             <div class="section__div--servicios">
                 <div class="section__div__table">
                     <!-- Asesoramiento tributario -->
-                    <div class="servicio">
+                    <div class="servicio  hoverZoom">
                         <img class="servicio__imagen" src="../assets/img/iconosServicios/tributario.png" alt="icono asesoramiento tributario">
                         <h2 class="servicio__tipo">Asesoramiento tributario </h2>
                         <ul class="servicio__detalle">
@@ -73,7 +73,7 @@
                     </div>
 
                     <!-- Asesorameinto contable -->
-                    <div class="servicio">
+                    <div class="servicio hoverZoom">
                         <img class="servicio__imagen" src="../assets/img/iconosServicios/contabilidad.png" alt="icono asesoramiento contable">
                         <h2 class="servicio__tipo">Asesoramiento contable</h2>
                         <ul class="servicio__detalle">
@@ -88,7 +88,7 @@
                     </div>
 
                     <!-- Asesoramiento laboral -->
-                    <div class="servicio">
+                    <div class="servicio hoverZoom">
                         <img class="servicio__imagen" src="../assets/img/iconosServicios/laboral.png" alt="icono asesoramiento laboral">
                         <h2 class="servicio__tipo">Asesoramiento laboral</h2>
                         <ul class="servicio__detalle">
@@ -101,7 +101,7 @@
                     </div>
 
                     <!-- Asesoramiento societario -->
-                    <div class="servicio">
+                    <div class="servicio hoverZoom">
                         <img class="servicio__imagen" src="../assets/img/iconosServicios/societario.png" alt="icono asesoramiento societario">
                         <h2 class="servicio__tipo">Asesoramiento societario</h2> 
                         <ul class="servicio__detalle">
@@ -114,7 +114,7 @@
                     </div>
 
                     <!-- Asoramiento en proyectos de inversion -->
-                    <div class="servicio">
+                    <div class="servicio hoverZoom">
                         <img class="servicio__imagen" src="../assets/img/iconosServicios/inversion.png" alt="icono asesoramiento de proyectos">
                         <h2 class="servicio__tipo">Asesoramiento  de proyectos</h2>
                         <ul class="servicio__detalle">
